css/styles.css
/* ... */
.contact-section form textarea:focus,
.contact-section form textarea:hover,
.contact-section form input[type="text"]:focus,
.contact-section form input[type="text"]:hover,
.contact-section form input[type="email"]:focus,
.contact-section form input[type="email"]:hover {
  border: 1px solid #36b37f;
}

.contact-section form button {
  max-width: 8em;
}

.contact-section .social-media-iconlist {
  margin-top: 1.5em;
}

.dev-email {
  margin: 1em;
  text-align: center;
  font-size: 1.2em;
  color: #42526e;
}

.details-popout {
  position: fixed;
  display: flex;
  top: 0;
  left: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: rgba(193, 199, 208, 0.9);
}

.details-popout .inner-details {
  width: calc(100% - 2em);
  height: calc(100vh - 2em);
  max-width: 42em;
  padding: 1em;
  display: flex;
  flex-direction: column;
  border-radius: 1em;
  background-color: white;
  justify-items: flex-start;
}

.inner-details .details-close-container {
  width: 100%;
  margin-bottom: 0.5em;
  display: flex;
  justify-content: end;
  align-items: center;
  flex-wrap: wrap;
}

.inner-details .details-close-container img {
  height: 1.5em;
  cursor: pointer;
  z-index: 1;
}

.inner-details .details-img-container {
  width: 100%;
  border-radius: 0.5em;
  margin-bottom: 1.5em;
  overflow: hidden;
  margin-top: -2em;
}

.inner-details .details-img-container img {
  width: 100%;
}

.inner-details .details-header {
  width: 80%;
}

.details-header h2 {
  font-weight: 600;
  color: #172b4d;
  line-height: 1.5em;
}

.details-header ul {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
  margin-top: 1em;
}

.details-header ul li {
  font-size: 0.7em;
  font-weight: 600;
  color: #3a4a42;
  padding: 0.8em;
  border-radius: 0.5em;
  background-color: #ebecf0;
}

.inner-details .details-buttons {
  width: 100%;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: flex-end;
  order: 1;
  gap: 0.6em;
  margin-top: 1.3em;
}

.inner-details .details-details {
  color: #344563;
  line-height: 1.5em;
  margin-top: 1.5em;
  font-size: 0.8em;
}

/* MEDIA QUERIES */
@media (min-width: 768px) {
  .main-body {
    display: grid;
  }

  .header {
    position: fixed;
    left: 0;
    padding: 2em;
  }

  .header .menu-button,
  .header h2 {
    display: none;
  }

  .header ul {
    margin: 0 auto;
    display: flex;
    gap: 2em;
  }

  .header ul li a {
    text-decoration: none;
    font-weight: 600;
    font-size: 1em;
    color: #344563;
  }

  .headline-section {
    background-image: url(../images/Header-llustration-desktop.svg);
  }

  .headline-section h1 {
    font-weight: 800;
    font-size: 3em;
  }

  .headline-section .paragraph-text {
    margin-top: 1em;
  }

  .about-me-header {
    padding-top: 5em;
    margin-top: 3em;
    background-image: url(../images/illustration-about-me-1-desktop.svg), url(../images/illustration-about-me-2-desktop.svg);
    background-position: right top, left bottom;
    background-repeat: no-repeat, no-repeat;
  }

  .contact-section {
    flex-direction: row;
    background-image: none;
    background-image: url(../images/form-illustration-desktop.svg);
    background-size: 100%;
    padding-bottom: 15em;
  }

  .contact-section .form-container {
    margin: 0 auto;
    display: flex;
    align-items: center;
    max-width: 73em;
    gap: 1em;
  }

  .contact-section .form-container .section-headline {
    flex: 1 1 40%;
    font-size: 2em;
    padding: 0 0 0 1em;
    line-height: 1.5em;
  }

  .contact-section form {
    flex: 1 1 60%;
    align-items: initial;
  }

  .contact-section form input,
  .contact-section form textarea {
    width: calc(100% - 2.2em);
  }

  footer .dev-email {
    display: none;
  }

  footer .social-media-iconlist {
    padding: 1em;
    display: flex;
    border-top: 1px solid #dfe1e6;
  }

  .contact-section .social-media-iconlist,
  .contact-section .dev-email {
    display: none;
  }

  .details-popout {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    background-color: rgba(193, 199, 208, 0.9);
  }

  .details-popout .inner-details {
    position: absolute;
    width: calc(100% - 3em);
    max-height: 60em;
    max-width: 42em;
    padding: 1.3em;
    display: flex;
    flex-wrap: wrap;
    border-radius: 1em;
    background-color: white;
  }

  .inner-details .details-close-container {
    width: 100%;
    margin-bottom: 0.5em;
    display: flex;
    justify-content: end;
    align-items: center;
    flex-wrap: wrap;
  }

  .inner-details .details-close-container img {
    height: 2em;
    cursor: pointer;
  }

  .inner-details .details-img-container {
    width: 100%;
    height: auto;
    border-radius: 1em;
    margin-bottom: 1.5em;
    overflow: hidden;
  }

  .inner-details .details-img-container img {
    width: 100%;
    height: 100%;
  }

  .inner-details .details-header {
    flex: 1 1 65%;
  }

  .details-header h2 {
    font-weight: 700;
  }

  .details-header ul {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5em;
    margin-top: 1em;
  }

  .details-header ul li {
    font-size: 0.7em;
    padding: 0.8em;
    border-radius: 0.5em;
    background-color: #ebecf0;
  }

  .inner-details .details-buttons {
    flex: 1 1 35%;
    display: flex;
    gap: 0.6em;
    justify-content: end;
    align-items: flex-start;
    order: 0;
  }

  .inner-details .details-details {
    color: #344563;
    line-height: 1.5em;
    margin-top: 1.5em;
  }

  .green-icon-button {
    display: flex;
    height: auto;
    justify-content: center;
    align-items: center;
    gap: 0.5em;
    padding: 0.7em;
    font-size: 0.8em;
    text-decoration: none;
    color: white;
    border-radius: 0.5em;
    background-color: #36b37e;
  }
}

@media (min-width: 1000px) {
  .work-cards-container {
    max-width: 1300px;
  }
}

.hide-popout {
  margin-top: 100vh;
}
/* ... */

